[package]
name = "hyerix-natsfixture"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Single-binary, language-neutral CI fixture for NATS-dependent code. Spins up an ephemeral NATS server with JetStream/KV/Object Store pre-loaded from a YAML manifest."
authors = ["Hyerix <hello@hyerix.ai>"]
license = "Apache-2.0"
homepage = "https://hyerix.ai"
repository = "https://github.com/hyerix/hyerix-natsfixture"
readme = "README.md"
keywords = ["nats", "jetstream", "fixture", "testing", "ci"]
categories = ["command-line-utilities", "development-tools::testing"]

[lib]
name = "hyerix_natsfixture"
path = "src/lib.rs"

[[bin]]
name = "hyerix-natsfixture"
path = "src/main.rs"

[dependencies]
async-nats = "0.47"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "process", "io-util", "fs", "net", "time", "sync"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tempfile = "3"
which = "7"
humantime-serde = "1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
assert_cmd = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
